--- a/app/index.html
+++ b/app/index.html
@@ -32,19 +32,241 @@
 </head>
 <body>
 
+<div class="panel">
+	<div class="container">
+		<div class="panel__nav col">
+			<ul>
+				<li><a href="#catalong">продукция</a></li>
+				<li><a href="#about">Производство</a></li>
+				<li><a href="#how">инструкция</a></li>
+				<li><a href="#advantages">преимущества</a></li>
+				<li><a href="#pay-delivery">оплата и доставка</a></li>
+			</ul>
+		</div>
+		<div class="panel__phone col"><img src="upload/icons/phone-round.png" alt=""><a href="">+ 3 8099 562 10 93</a></div>
+	</div>
+</div>
 
 <header class="header">
-	
+	<div class="container">
+		<div class="header__logo logo"><img src="upload/logo.png" alt=""></div>
+		<div class="header__title">
+			<p>эксклюзивная дубовая щепа</p>
+			<p>из французского скального дуба</p>
+			<p>делает аромат вина утонченным!</p>
+		</div>
+		<div class="header__form form">
+			<div class="form__title">Запрос на обратный звонок</div>
+			<div class="form__desc">После отправки этого сообщения <br>мы перезвоним вам или <br>ответим на почту</div>
+			<div class="form__elements">
+				<div class="form__input input"><img src="upload/icons/persona.png" alt=""><input type="text" placeholder="Ваше имя*"></div>
+				<div class="form__input input input_phone"><img src="upload/icons/phone.png" alt=""><input type="text" placeholder="Ваш телефон*"></div>
+				<div class="form__input input"><img src="upload/icons/email.png" alt=""><input type="text" placeholder="E-mail"></div>
+				<button class="form__button button">Отправить</button>
+			</div>
+		</div>
+	</div>
 </header>
 
 
 <main class="main">
-	
+	<div class="catalog" id="catalog">
+		<div class="container">
+			<div class="catalog__title title">Наша продукция</div>
+			<div class="catalog__list row_line">
+				<div class="catalog__item col_line">
+					<div class="catalog__subtitle">Дубовая щепа легкой обжарки</div>
+					<div class="catalog__image"><img src="upload/catalog/1.png" alt=""></div>
+					<div class="catalog__price">72 грн/100 грамм</div>
+					<a href="" class="catalog__button button">Купить</a>
+				</div>
+				<div class="catalog__item col_line">
+					<div class="catalog__subtitle">Дубовая щепа средней обжарки</div>
+					<div class="catalog__image"><img src="upload/catalog/2.png" alt=""></div>
+					<div class="catalog__price">79 грн/100 грамм</div>
+					<a href="" class="catalog__button button">Купить</a>
+				</div>
+				<div class="catalog__item col_line">
+					<div class="catalog__subtitle">Дубовая щепа сильной обжарки</div>
+					<div class="catalog__image"><img src="upload/catalog/3.png" alt=""></div>
+					<div class="catalog__price">83 грн/100 грамм</div>
+					<a href="" class="catalog__button button">Купить</a>
+				</div>
+			</div>
+			<div class="catalog__desc title">инструкция к применению</div>
+			<div class="catalog__link link">
+				<div class="link__text">Инструкция по использованию щепы в PDF файле</div>
+				<a href="" class="link__button button">скачать</a>
+			</div>
+		</div>
+	</div>
+	<div class="about" id="about">
+		<div class="container">
+			<div class="about__title title">Наше производство</div>
+			<div class="about__content row">
+				<div class="about__text">
+					<p>Наша щепа разработана в Научно-исследовательской лаборатории лучшими специалистами в сфере производства сырьевых ресурсов для виноделия с использованием современных технологий и оборудования.</p>
+					<p>Мы сотрудничаем с лучшими производителями алкогольных напитков Украины и стран СНГ.</p>
+					<p>Наши приоритетные задачи – позволить каждому желающему создать свой напиток с идеальным вкусом, используя нашу дубовую щепу.</p>
+				</div>
+				<div class="about__image right"><img src="upload/tenacious.png" alt=""></div>
+			</div>
+		</div>
+	</div>
+	<div class="advantages" id="advantages">
+		<div class="advantages__head">
+			<div class="container">
+				<div class="advantages__title title">НАШИ ПРЕИМУЩЕСТВА</div>
+			</div>
+		</div>
+		<div class="advantages__body">
+			<div class="container">
+				<div class="advantages__list">
+					<div class="advantages__item">
+						<div class="advantages__icon"><img src="upload/icons/wine.png" alt=""></div>
+						<div class="advantages__content">
+							<div class="advantages__subtitle">Идеализация напитка</div>
+							<div class="advantages__text">С помощью нашей щепы вы сможете устранить «мышиный тон» в вине и коньячных спиртах. Напиток после использования щепы приобретает благородный тон выдержки в дубовой бочке в результате обогащения фенольными веществами и ароматообразующими компонентами древесины дуба (эвгенол, душистые лактоны и др.)</div>
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__icon"><img src="upload/icons/sheild.png" alt=""></div>
+						<div class="advantages__content">
+							<div class="advantages__subtitle">Проверенное качество</div>
+							<div class="advantages__text">Наша щепа уже более 6 лет представлена на рынке Украины и стран Европы. Проверенное временем и практикой качество – довольные клиенты.</div>
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__icon"><img src="upload/icons/water.png" alt=""></div>
+						<div class="advantages__content">
+							<div class="advantages__subtitle">Доступность и удобство</div>
+							<div class="advantages__text">Наша щепа не требует предварительной подготовки (как замачивание дубовой бочки перед использованием), а также позволяет использовать для созревания напитка любую тару: стекло, пластик, нержавейку.</div>
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__icon"><img src="upload/icons/purse.png" alt=""></div>
+						<div class="advantages__content">
+							<div class="advantages__subtitle">Экономия денег</div>
+							<div class="advantages__text">Купить настоящую французскую бочку и настоять в ней вино или коньяк с идеальным вкусом не всегда представляется возможность, ведь это удовольствие стоит немалых денег. А вот с нашей щепой Вы идеально справитесь с поставленной задачей, не затрачивая при этом значительных средств.</div>
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__icon"><img src="upload/icons/fire.png" alt=""></div>
+						<div class="advantages__content">
+							<div class="advantages__subtitle">Разнообразие вкуса</div>
+							<div class="advantages__text">
+								<p>Дубовая щепа бывает разного обжига, что позволяет экспериментировать с конечным вкусом алкогольного напитка. Каждый уровень обжига привносит свои ноты в напиток:</p>
+								<p><span class="color-red">Легкий обжиг</span> − тонкий оттенок ванили, фруктов и цветов.</p>
+								<p><span class="color-red">Средний обжиг</span> − яркий аромат винили, миндаля, кокоса, пряностей, карамели.</p>
+								<p><span class="color-red">Сильный обжиг</span> − насыщенный дымный, шоколадный эффект.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="how" id="how">
+		<div class="container">
+			<div class="how__title title">Как мы работаем</div>
+			<div class="how__list row_line">
+				<div class="how__item col_line">
+					<div class="how__wrap">
+						<div class="how__num">01</div>
+						<div class="how__icon"><img src="upload/icons/call.png" alt=""></div>
+					</div>
+					<div class="how__text">Вы звоните нам или оставляете заявку на обратный звонок</div>
+				</div>
+				<div class="how__item col_line">
+					<div class="how__wrap">
+						<div class="how__num">02</div>
+						<div class="how__icon"><img src="upload/icons/manager.png" alt=""></div>
+					</div>
+					<div class="how__text">Вместе уточняемобъем, срок икомплектацию</div>
+				</div>
+				<div class="how__item col_line">
+					<div class="how__wrap">
+						<div class="how__num">03</div>
+						<div class="how__icon"><img src="upload/icons/list.png" alt=""></div>
+					</div>
+					<div class="how__text">мы отправляем вам товар</div>
+				</div>
+				<div class="how__item col_line">
+					<div class="how__wrap">
+						<div class="how__num">04</div>
+						<div class="how__icon"><img src="upload/icons/delivery.png" alt=""></div>
+					</div>
+					<div class="how__text">Доставка щепытранспортной компанией</div>
+				</div>
+				<div class="how__item col_line">
+					<div class="how__wrap">
+						<div class="how__num">05</div>
+						<div class="how__icon"><img src="upload/icons/cards.png" alt=""></div>
+					</div>
+					<div class="how__text">оплата при получении</div>
+				</div>
+				<div class="how__item col_line">
+					<div class="how__wrap">
+						<div class="how__num">06</div>
+						<div class="how__icon"><img src="upload/icons/thumb-up.png" alt=""></div>
+					</div>
+					<div class="how__text">+ еще одиндовольный клиент</div>
+				</div>
+			</div>
+			<div class="how__block" id="pay-delivery">
+				<div class="how__subtitle">УСЛОВИЯ ОПЛАТЫ И ДОСТАВКИ</div>
+				<div class="how__text">
+					<p>Сделать заказ Вы можете, позвонив по одному из указанных телефонов.</p>
+					<p>Оплата осуществляется безналичным (на карту Приватбанка) либо наличным расчетом (наложенным платежом при получении в отделении Новой почты).</p>
+					<p>Доставка щепы осуществляется следующим образом: по территории Украины – Новая почта. по территории России и стран СНГ – любым из перевозчиков.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="form-block">
+		<div class="container row">
+			<div class="form-block__image col"><img src="upload/manager.png" alt=""></div>
+			<div class="form-block__form col">
+				<div class="form-block__title">У вас остались вопросы? <br>оставьте заявку на обратный звонок и мы вам перезвоним</div>
+				<div class="form-block__elements form">
+					<div class="row">
+						<div class="col"><div class="form__input input"><img src="" alt=""><input type="text" placeholder="Ваше имя*"></div></div>
+						<div class="col"><div class="form__input input"><img src="" alt=""><input type="text" placeholder="E-mail"></div></div>
+					</div>
+					<div class="row">
+						<div class="col"><div class="form__input input input_phone"><img src="" alt=""><input type="text" placeholder="Ваш телефон*"></div></div>
+						<div class="col"><button class="form__button button">Отправить</button></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </main>
 
 
 <footer class="footer">
-	
+	<div class="container">
+		<div class="footer__top row">
+			<div class="footer__nav col">
+				<ul>
+					<li><a href="#catalong">продукция</a></li>
+					<li><a href="#about">Производство</a></li>
+					<li><a href="#how">инструкция</a></li>
+					<li><a href="#advantages">преимущества</a></li>
+					<li><a href="#pay-delivery">оплата и доставка</a></li>
+				</ul>
+			</div>
+			<div class="footer__phone col"><img src="upload/icons/phone-round.png" alt=""><a href="">+ 3 8099 562 10 93</a></div>
+		</div>
+		<div class="footer__middle row">
+			<div class="footer__logo col"><img src="upload/logo.png" alt=""></div>
+			<div class="footer__counters col right">
+				<div class="footer__viber"><a href="upload/icons/viber.png"><img src="" alt=""></a></div>
+				<div class="footer__88x31"><img src="" alt=""></div>
+			</div>
+		</div>
+		<div class="footer__bottom">Слобожанская Бондарная Артель © 2011-2017. Все права защищены. 18+</div>
+	</div>
 </footer>
 
 
