--- a/app/index.html
+++ b/app/index.html
@@ -32,37 +32,39 @@
 </head>
 <body>
 
-<div class="panel">
-	<div class="container">
-		<div class="panel__nav col">
+<div class="panel triangles-after">
+	<div class="container row_line">
+		<div class="panel__nav col_line">
 			<ul>
-				<li><a href="#catalong">продукция</a></li>
+				<li><a href="#catalog">продукция</a></li>
 				<li><a href="#about">Производство</a></li>
 				<li><a href="#how">инструкция</a></li>
 				<li><a href="#advantages">преимущества</a></li>
 				<li><a href="#pay-delivery">оплата и доставка</a></li>
 			</ul>
 		</div>
-		<div class="panel__phone col"><img src="upload/icons/phone-round.png" alt=""><a href="">+ 3 8099 562 10 93</a></div>
+		<div class="panel__phone phone col_line"><img src="upload/icons/phone-round.png" alt=""><a href="">+ 3 8099 562 10 93</a></div>
 	</div>
 </div>
 
 <header class="header">
 	<div class="container">
 		<div class="header__logo logo"><img src="upload/logo.png" alt=""></div>
-		<div class="header__title">
-			<p>эксклюзивная дубовая щепа</p>
-			<p>из французского скального дуба</p>
-			<p>делает аромат вина утонченным!</p>
-		</div>
-		<div class="header__form form">
-			<div class="form__title">Запрос на обратный звонок</div>
-			<div class="form__desc">После отправки этого сообщения <br>мы перезвоним вам или <br>ответим на почту</div>
-			<div class="form__elements">
-				<div class="form__input input"><img src="upload/icons/persona.png" alt=""><input type="text" placeholder="Ваше имя*"></div>
-				<div class="form__input input input_phone"><img src="upload/icons/phone.png" alt=""><input type="text" placeholder="Ваш телефон*"></div>
-				<div class="form__input input"><img src="upload/icons/email.png" alt=""><input type="text" placeholder="E-mail"></div>
-				<button class="form__button button">Отправить</button>
+		<div class="row">
+			<div class="header__title col">
+				<p>эксклюзивная дубовая щепа</p>
+				<p>из французского скального дуба</p>
+				<p>делает аромат вина утонченным!</p>
+			</div>
+			<div class="header__form form col">
+				<div class="form__title">Запрос на обратный звонок</div>
+				<div class="form__desc">После отправки этого сообщения <br>мы перезвоним вам или <br>ответим на почту</div>
+				<div class="form__elements">
+					<div class="form__input input input_name"><img src="upload/icons/persona.png" alt=""><input type="text" placeholder="Ваше имя*"></div>
+					<div class="form__input input input_phone"><img src="upload/icons/phone.png" alt=""><input type="text" placeholder="Ваш телефон*"></div>
+					<div class="form__input input input_email"><img src="upload/icons/email.png" alt=""><input type="text" placeholder="E-mail"></div>
+					<button class="form__button button">Отправить</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -104,12 +106,12 @@
 		<div class="container">
 			<div class="about__title title">Наше производство</div>
 			<div class="about__content row">
-				<div class="about__text">
+				<div class="about__text col right">
 					<p>Наша щепа разработана в Научно-исследовательской лаборатории лучшими специалистами в сфере производства сырьевых ресурсов для виноделия с использованием современных технологий и оборудования.</p>
 					<p>Мы сотрудничаем с лучшими производителями алкогольных напитков Украины и стран СНГ.</p>
 					<p>Наши приоритетные задачи – позволить каждому желающему создать свой напиток с идеальным вкусом, используя нашу дубовую щепу.</p>
 				</div>
-				<div class="about__image right"><img src="upload/tenacious.png" alt=""></div>
+				<div class="about__image col"><img src="upload/tenacious.png" alt=""></div>
 			</div>
 		</div>
 	</div>
@@ -165,6 +167,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="advantages__footer"></div>
 	</div>
 	<div class="how" id="how">
 		<div class="container">
@@ -249,7 +252,7 @@
 		<div class="footer__top row">
 			<div class="footer__nav col">
 				<ul>
-					<li><a href="#catalong">продукция</a></li>
+					<li><a href="#catalog">продукция</a></li>
 					<li><a href="#about">Производство</a></li>
 					<li><a href="#how">инструкция</a></li>
 					<li><a href="#advantages">преимущества</a></li>
