--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,20 @@
 </head>
 <body>
 
+<div class="popup">
+	<div class="form">
+		<div class="form__title">Запрос на обратный звонок</div>
+		<div class="form__desc">После отправки этого сообщения <br>мы перезвоним вам или <br>ответим на почту</div>
+		<div class="form__elements">
+			<div class="form__input input input_name"><img src="upload/icons/persona.png" alt=""><input type="text" placeholder="Ваше имя*"></div>
+			<div class="form__input input input_phone"><img src="upload/icons/phone.png" alt=""><input type="text" placeholder="Ваш телефон*"></div>
+			<div class="form__input input input_email"><img src="upload/icons/email.png" alt=""><input type="text" placeholder="E-mail"></div>
+			<button class="form__button button">Отправить</button>
+		</div>
+	</div>
+</div>
+
+
 <div class="panel triangles-after">
 	<div class="container row_line">
 		<div class="panel__nav col_line">
@@ -173,42 +187,42 @@
 		<div class="container">
 			<div class="how__title title">Как мы работаем</div>
 			<div class="how__list row_line">
-				<div class="how__item col_line">
+				<div class="how__item col_line col-6">
 					<div class="how__wrap">
 						<div class="how__num">01</div>
 						<div class="how__icon"><img src="upload/icons/call.png" alt=""></div>
 					</div>
 					<div class="how__text">Вы звоните нам или оставляете заявку на обратный звонок</div>
 				</div>
-				<div class="how__item col_line">
+				<div class="how__item col_line col-6">
 					<div class="how__wrap">
 						<div class="how__num">02</div>
 						<div class="how__icon"><img src="upload/icons/manager.png" alt=""></div>
 					</div>
-					<div class="how__text">Вместе уточняемобъем, срок икомплектацию</div>
+					<div class="how__text">Вместе уточняем объем, срок икомплектацию</div>
 				</div>
-				<div class="how__item col_line">
+				<div class="how__item col_line col-6">
 					<div class="how__wrap">
 						<div class="how__num">03</div>
 						<div class="how__icon"><img src="upload/icons/list.png" alt=""></div>
 					</div>
 					<div class="how__text">мы отправляем вам товар</div>
 				</div>
-				<div class="how__item col_line">
+				<div class="how__item col_line col-6">
 					<div class="how__wrap">
 						<div class="how__num">04</div>
 						<div class="how__icon"><img src="upload/icons/delivery.png" alt=""></div>
 					</div>
-					<div class="how__text">Доставка щепытранспортной компанией</div>
+					<div class="how__text">Доставка щепы транспортной компанией</div>
 				</div>
-				<div class="how__item col_line">
+				<div class="how__item col_line col-6">
 					<div class="how__wrap">
 						<div class="how__num">05</div>
 						<div class="how__icon"><img src="upload/icons/cards.png" alt=""></div>
 					</div>
 					<div class="how__text">оплата при получении</div>
 				</div>
-				<div class="how__item col_line">
+				<div class="how__item col_line col-6">
 					<div class="how__wrap">
 						<div class="how__num">06</div>
 						<div class="how__icon"><img src="upload/icons/thumb-up.png" alt=""></div>
@@ -218,14 +232,15 @@
 			</div>
 			<div class="how__block" id="pay-delivery">
 				<div class="how__subtitle">УСЛОВИЯ ОПЛАТЫ И ДОСТАВКИ</div>
-				<div class="how__text">
-					<p>Сделать заказ Вы можете, позвонив по одному из указанных телефонов.</p>
-					<p>Оплата осуществляется безналичным (на карту Приватбанка) либо наличным расчетом (наложенным платежом при получении в отделении Новой почты).</p>
-					<p>Доставка щепы осуществляется следующим образом: по территории Украины – Новая почта. по территории России и стран СНГ – любым из перевозчиков.</p>
+				<div class="how__content">
+					<p><span class="color-red">Сделать заказ</span> Вы можете, позвонив по одному из указанных телефонов.</p>
+					<p><span class="color-red">Оплата</span> осуществляется безналичным (на карту Приватбанка) либо наличным расчетом (наложенным платежом при получении в отделении Новой почты).</p>
+					<p><span class="color-red">Доставка</span> щепы осуществляется следующим образом: по территории Украины – Новая почта. по территории России и стран СНГ – любым из перевозчиков.</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<div class="form-block">
 		<div class="container row">
 			<div class="form-block__image col"><img src="upload/manager.png" alt=""></div>
@@ -233,12 +248,12 @@
 				<div class="form-block__title">У вас остались вопросы? <br>оставьте заявку на обратный звонок и мы вам перезвоним</div>
 				<div class="form-block__elements form">
 					<div class="row">
-						<div class="col"><div class="form__input input"><img src="" alt=""><input type="text" placeholder="Ваше имя*"></div></div>
-						<div class="col"><div class="form__input input"><img src="" alt=""><input type="text" placeholder="E-mail"></div></div>
+						<div class="col col-2"><div class="form__input input input_name"><img src="upload/icons/persona.png" alt=""><input type="text" placeholder="Ваше имя*"></div></div>
+						<div class="col col-2"><div class="form__input input input_email"><img src="upload/icons/email.png" alt=""><input type="text" placeholder="E-mail"></div></div>
 					</div>
 					<div class="row">
-						<div class="col"><div class="form__input input input_phone"><img src="" alt=""><input type="text" placeholder="Ваш телефон*"></div></div>
-						<div class="col"><button class="form__button button">Отправить</button></div>
+						<div class="col col-2"><div class="form__input input input_phone"><img src="upload/icons/phone.png" alt=""><input type="text" placeholder="Ваш телефон*"></div></div>
+						<div class="col col-2"><button class="form__button button">Отправить</button></div>
 					</div>
 				</div>
 			</div>
@@ -249,8 +264,8 @@
 
 <footer class="footer">
 	<div class="container">
-		<div class="footer__top row">
-			<div class="footer__nav col">
+		<div class="footer__top row_line">
+			<div class="footer__nav col_line">
 				<ul>
 					<li><a href="#catalog">продукция</a></li>
 					<li><a href="#about">Производство</a></li>
@@ -259,18 +274,56 @@
 					<li><a href="#pay-delivery">оплата и доставка</a></li>
 				</ul>
 			</div>
-			<div class="footer__phone col"><img src="upload/icons/phone-round.png" alt=""><a href="">+ 3 8099 562 10 93</a></div>
+			<div class="footer__phone col_line phone"><img src="upload/icons/phone-round-white.png" alt=""><a href="">+ 3 8099 562 10 93</a></div>
 		</div>
 		<div class="footer__middle row">
 			<div class="footer__logo col"><img src="upload/logo.png" alt=""></div>
 			<div class="footer__counters col right">
-				<div class="footer__viber"><a href="upload/icons/viber.png"><img src="" alt=""></a></div>
-				<div class="footer__88x31"><img src="" alt=""></div>
+				<div class="footer__viber"><a href=""><img src="upload/icons/viber.png" alt=""></a></div>
+
+				<!-- Yandex.Metrika informer -->
+				<a href="https://metrika.yandex.ru/stat/?id=46522092&amp;from=informer"
+				target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/46522092/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+				style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="46522092" data-lang="ru" /></a>
+				<!-- /Yandex.Metrika informer -->
 			</div>
 		</div>
 		<div class="footer__bottom">Слобожанская Бондарная Артель © 2011-2017. Все права защищены. 18+</div>
 	</div>
 </footer>
+
+
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter46522092 = new Ya.Metrika({
+                    id:46522092,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true,
+                    trackHash:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/46522092" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 
 </body>
